# brownie2ape

./: .gitignore  AGENTS.md  CASE_STUDY.md  README.md  instructions.md  pyproject.toml  requirements.txt  ruff.toml
brownie2ape/: __init__.py  ai_fallback.py  cli.py  codemod_engine.py  pattern_detector.py  reporter.py  test_harness.py
brownie2ape/rules/: rules.yaml
ethers5to6/: README.md  __init__.py  _sg.py  ai_fallback.py  cli.py  codemod_engine.py  detector.py  reporter.py  safety_layer.py  verifier.py
ethers5to6/rules/: __init__.py
tests/: conftest.py  test_ai_fallback.py  test_codemod_engine.py  test_ethers5to6_codemod_engine.py  test_ethers5to6_detector.py  test_ethers5to6_integration.py  test_ethers5to6_safety.py  test_integration.py  test_pattern_detector.py
tests/fixtures/: sample_brownie_code.py
tests/fixtures/sample_v5_project/: arith.ts  contract.ts  migration-report.md  utils.ts
