[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brownie2ape"
version = "1.0.0"
description = "Automated Brownie to Ape Framework migration using jssg"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]
ai = [
    "anthropic>=0.40.0",
]

[project.scripts]
brownie2ape = "brownie2ape.cli:main"
ethers5to6 = "ethers5to6.cli:main"

[tool.setuptools]
packages = ["brownie2ape", "ethers5to6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]